Edited wiki page PageName through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -22,7 +22,7 @@ Since all regions have the _potential_ to be accessed by multiple threads, all a
 === Speed ===
 The speed of the program has greatly increased.  To ensure correctness, the program was changed to have completely a immutable WaterMatrix and WaterPixels.  This added a huge overhead in that it required more iterations to complete the task.  Thus, I added a reference to a region on the WaterPixel and now only a few iterations are required.  There is some overhead with synchronizing on the WaterPixel's region, but the gains far outweigh this overhead.
 
-After looking into various data structures for keeping track of the regions and states, I decided to utilize hash sets because the methods the program uses most are theoretically more performant on this class.  Direct access, removal, and checking if an object exists in the hash set all should be O(1), or constant time access no matter the data set.  In the real world though, this is not the case.  There is an enormous overhead using this class and it uses up a ton of memory.  I've since replaced all collections to use ArrayList instead, which improved performance by about 15 seconds.
+After looking into various data structures for keeping track of the regions and pixels, I decided to utilize hash sets because the methods the program uses most are theoretically more performant on this class.  Direct access, removal, and checking if an object exists in the hash set all should be O(1), or constant time access no matter the size of the data set.  In the real world though, this is not the case.  There is an enormous overhead using this class and it uses up a ton of memory.  I've since replaced all collections to use ArrayList instead, which improved performance by about 15 seconds.
 
 === Formatting ===
 The output file used to print just the ID's of each region directly.  This was hard to read at a glance, especially when there are many regions (hundreds to thousands).  To enhance readability, each number may be '0' padded so all the columns in the file line up properly.  The program checks the ID with the most digits and pads all other IDs to match its length.
